// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <t
          accessType="online"
          buttonText="Login w/ Google"
          clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
          cookiePolicy="single_host_origin"
          disabledStyle={
            Object {
              "opacity": 0.6,
            }
          }
          fetchBasicProfile={true}
          isSignedIn={false}
          jsSrc="https://apis.google.com/js/client:platform.js"
          onFailure={[Function]}
          onRequest={[Function]}
          onSuccess={[Function]}
          prompt=""
          scope="profile email"
          tag="button"
          type="button"
          uxMode="popup"
        />,
        null,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessType": "online",
          "buttonText": "Login w/ Google",
          "clientId": "241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com",
          "cookiePolicy": "single_host_origin",
          "disabledStyle": Object {
            "opacity": 0.6,
          },
          "fetchBasicProfile": true,
          "isSignedIn": false,
          "jsSrc": "https://apis.google.com/js/client:platform.js",
          "onFailure": [Function],
          "onRequest": [Function],
          "onSuccess": [Function],
          "prompt": "",
          "scope": "profile email",
          "tag": "button",
          "type": "button",
          "uxMode": "popup",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <t
            accessType="online"
            buttonText="Login w/ Google"
            clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
            cookiePolicy="single_host_origin"
            disabledStyle={
              Object {
                "opacity": 0.6,
              }
            }
            fetchBasicProfile={true}
            isSignedIn={false}
            jsSrc="https://apis.google.com/js/client:platform.js"
            onFailure={[Function]}
            onRequest={[Function]}
            onSuccess={[Function]}
            prompt=""
            scope="profile email"
            tag="button"
            type="button"
            uxMode="popup"
          />,
          null,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessType": "online",
            "buttonText": "Login w/ Google",
            "clientId": "241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com",
            "cookiePolicy": "single_host_origin",
            "disabledStyle": Object {
              "opacity": 0.6,
            },
            "fetchBasicProfile": true,
            "isSignedIn": false,
            "jsSrc": "https://apis.google.com/js/client:platform.js",
            "onFailure": [Function],
            "onRequest": [Function],
            "onSuccess": [Function],
            "prompt": "",
            "scope": "profile email",
            "tag": "button",
            "type": "button",
            "uxMode": "popup",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App should match snapshot when user is logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <div
          className="main-container"
        >
          <t
            buttonText="Logout"
            className="logout-button"
            disabledStyle={
              Object {
                "opacity": 0.6,
              }
            }
            jsSrc="https://apis.google.com/js/client:platform.js"
            onLogoutSuccess={[Function]}
            tag="button"
          />
          <div
            className="toggle-map-style"
          >
            <button
              className="streets-button"
              onClick={[Function]}
            />
          </div>
          <Connect(Map)
            mapStyle="streets"
          />
          <Connect(NavBar) />
        </div>,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <t
              buttonText="Logout"
              className="logout-button"
              disabledStyle={
                Object {
                  "opacity": 0.6,
                }
              }
              jsSrc="https://apis.google.com/js/client:platform.js"
              onLogoutSuccess={[Function]}
              tag="button"
            />,
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>,
            <Connect(Map)
              mapStyle="streets"
            />,
            <Connect(NavBar) />,
          ],
          "className": "main-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "buttonText": "Logout",
              "className": "logout-button",
              "disabledStyle": Object {
                "opacity": 0.6,
              },
              "jsSrc": "https://apis.google.com/js/client:platform.js",
              "onLogoutSuccess": [Function],
              "tag": "button",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="streets-button"
                onClick={[Function]}
              />,
              "className": "toggle-map-style",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "streets-button",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "mapStyle": "streets",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <div
            className="main-container"
          >
            <t
              buttonText="Logout"
              className="logout-button"
              disabledStyle={
                Object {
                  "opacity": 0.6,
                }
              }
              jsSrc="https://apis.google.com/js/client:platform.js"
              onLogoutSuccess={[Function]}
              tag="button"
            />
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>
            <Connect(Map)
              mapStyle="streets"
            />
            <Connect(NavBar) />
          </div>,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <t
                buttonText="Logout"
                className="logout-button"
                disabledStyle={
                  Object {
                    "opacity": 0.6,
                  }
                }
                jsSrc="https://apis.google.com/js/client:platform.js"
                onLogoutSuccess={[Function]}
                tag="button"
              />,
              <div
                className="toggle-map-style"
              >
                <button
                  className="streets-button"
                  onClick={[Function]}
                />
              </div>,
              <Connect(Map)
                mapStyle="streets"
              />,
              <Connect(NavBar) />,
            ],
            "className": "main-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "buttonText": "Logout",
                "className": "logout-button",
                "disabledStyle": Object {
                  "opacity": 0.6,
                },
                "jsSrc": "https://apis.google.com/js/client:platform.js",
                "onLogoutSuccess": [Function],
                "tag": "button",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="streets-button"
                  onClick={[Function]}
                />,
                "className": "toggle-map-style",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "streets-button",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "mapStyle": "streets",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
